15294 Successful read/write calls should not set errno Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Reviewed by: Dan Cross <cross@oxidecomputer.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>